Funciona stmp!!! GG en el chat pero un fallo solo en observador a la hora de simular

--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
+# Base de datos
 DATABASE_URL=mysql+pymysql://root:miPassword123@localhost:3306/Stark_Industries
+
+# Correo
+MAIL_USERNAME=uaxconcurrente@gmail.com
+MAIL_PASSWORD=vrzhxdnadjumrcfd
+MAIL_FROM=uaxconcurrente@gmail.com
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_STARTTLS=True
+MAIL_SSL_TLS=False
