--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Base de datos
-DATABASE_URL=mysql+pymysql://root:miPassword123@localhost:3306/Stark_Industries
+DATABASE_URL=postgresql://uaxconcu:j6Fh3acOeZNwWUNrOsts6TcgJJLuc7Jl@dpg-d3nmu4hgv73c73cflub0-a.frankfurt-postgres.render.com/dbstarkindustries
 
 # Correo
 MAIL_USERNAME=uaxconcurrente@gmail.com
