--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn[standard]
 sqlmodel
 python-dotenv
-PyMySQL
+psycopg2-binary
 PyJWT
 fastapi-mail
 prometheus-fastapi-instrumentator
