--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 DATABASE_URL=postgresql://uaxconcu:j6Fh3acOeZNwWUNrOsts6TcgJJLuc7Jl@dpg-d3nmu4hgv73c73cflub0-a.frankfurt-postgres.render.com/dbstarkindustries
 
 # Correo
-MAIL_USERNAME=uaxconcurrente@gmail.com
-MAIL_PASSWORD=yocrxfywevwhntky
+MAIL_USERNAME=99581f001@smtp-brevo.com
+MAIL_PASSWORD=3ZXFkcgwMvSTNPBC
 MAIL_FROM=uaxconcurrente@gmail.com
 MAIL_PORT=587
-MAIL_SERVER=smtp.gmail.com
+MAIL_SERVER=smtp-relay.brevo.com
 MAIL_STARTTLS=True
 MAIL_SSL_TLS=False
