--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-fastapi==0.99.1
-pydantic<2
-uvicorn[standard]==0.23.2
-sqlmodel==0.0.8
-python-dotenv==1.0.0
-psycopg2-binary==2.9.7
-PyJWT==2.8.0
-fastapi-mail==1.4.1
-prometheus-fastapi-instrumentator==6.1.0
+fastapi
+uvicorn[standard]
+sqlmodel
+python-dotenv
+psycopg2-binary
+PyJWT
+prometheus-fastapi-instrumentator
